// Copyright 2020 Google LLC.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package google.events;

import "google/protobuf/descriptor.proto";

option csharp_namespace = "Google.Events.Protobuf";

extend google.protobuf.MessageOptions {
  // The CloudEvent type (e.g. "google.cloud.storage.object.v1.finalized")
  // that relates to this message.
  string cloud_event_type = 11716486;
}

extend google.protobuf.FileOptions {
  // The product (e.g. "Cloud Firestore") that owns the CloudEvents described
  // in this file.
  string cloud_event_product = 11716487;
}

extend google.protobuf.FileOptions {
  // An extension attribute used within the CloudEvents described in this file.
  repeated ExtensionAttribute cloud_event_extension_attribute = 11716488;
}

extend google.protobuf.MessageOptions {
  // The name of an extension attribute populated for this event. The extension
  // attribute should be more fully described within the file options.
  repeated string cloud_event_extension_name = 11716489;
}

// Description of an extension attribute.
message ExtensionAttribute {
  // Name of the CloudEvents attribute, e.g. "topic".
  // This must be all lower-case, to satisfy CloudEvent requirements.
  string name = 1;

  // Description of the attribute.
  string description = 2;

  // The name of the CloudEvents attribute in lower Camel case, e.g. "firebaseDatabaseHost".
  // This only needs to be populated if the name would otherwise be mis-represented.
  string camel_case_name = 3;
}
